#  Copyright Uni10 2014.


######################################################################
### ADD SUB-DIRECTORIES
######################################################################

add_subdirectory(datatype)
add_subdirectory(data-structure)
add_subdirectory(numeric)
add_subdirectory(tensor-network)
