#  Copyright Uni10 2014.
cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)


######################################################################
### ADD SUB-DIRECTORIES
######################################################################

add_subdirectory(datatype)
add_subdirectory(data-structure)
add_subdirectory(numeric)
add_subdirectory(tensor-network)
add_subdirectory(tools)
