#  Copyright Uni10  2014.


######################################################################
### LIST OF FILES
######################################################################

set(numeric_lib_sources 
  myLapack.cpp 
)

######################################################################
### BUILD SHARED LIBRARY
######################################################################

add_library(uni10-numeric SHARED ${numeric_lib_sources})


######################################################################
### INSTALL
######################################################################

install(TARGETS uni10-numeric DESTINATION lib COMPONENT libraries)


